<resources>
    <string name="app_name">Sprinkles Bakery</string>
    <string name="welcome_to">Welcome to</string>
    <string name="sprinkles">Sprinkles </string>
    <string name="bakery">bakery</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="register">Register</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="menu">menu</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order">Order</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="Home">Home</string>
    <string name="store">Store</string>
    <string name="all_categories">All Categories</string>
    <string name="most_popular">Most popular</string>
    <string name="view_all"><![CDATA[View all >]]></string>
    <string name="productImage">productImage</string>
    <string name="profile_picture">profile picture</string>
    <string name="button_remove">Button Remove</string>
    <string name="product_name">Product Name</string>
    <string name="delivered">Delivered</string>
    <string name="search">Search</string>
    <string name="_10kg">10KG</string>
    <string name="cupcake">Cupcake</string>
    <string name="lkr_100">LKR 100</string>
    <string name="_10">10%</string>
    <string name="view_less"><![CDATA[View less <]]></string>
    <string name="create_tables">
BEGIN TRANSACTION;
CREATE TABLE IF NOT EXISTS Category (
    category_id	INTEGER NOT NULL UNIQUE,
    name	TEXT NOT NULL,
    discount	INTEGER NOT NULL,
    PRIMARY KEY(category_id AUTOINCREMENT)
);
CREATE TABLE IF NOT EXISTS Product (
    product_id	INTEGER NOT NULL UNIQUE,
    name	TEXT NOT NULL,
    cream	TEXT NOT NULL,
    flavour	TEXT NOT NULL,
    unit_price	INTEGER NOT NULL,
    image	BLOB NULL,
    category_id	INTEGER NOT NULL,
    FOREIGN KEY(category_id) REFERENCES Category(category_id) ON UPDATE CASCADE ON DELETE CASCADE,
    PRIMARY KEY(product_id AUTOINCREMENT)
);
CREATE TABLE IF NOT EXISTS Orders (
    orders_id	INTEGER NOT NULL UNIQUE,
    date	TEXT NOT NULL,
    status	INTEGER NOT NULL,
    total_price	NUMERIC NOT NULL,
    user_id	INTEGER NOT NULL,
    FOREIGN KEY(user_id) REFERENCES User(user_id) ON UPDATE CASCADE ON DELETE CASCADE,
    PRIMARY KEY(orders_id AUTOINCREMENT)
);
CREATE TABLE IF NOT EXISTS User (
    user_id	INTEGER NOT NULL UNIQUE,
    name	TEXT NULL,
    contact	INTEGER NULL,
    image	BLOB NULL,
    address	TEXT NULL,
    auth_id	INTEGER NOT NULL UNIQUE,
    FOREIGN KEY(auth_id) REFERENCES Auth(auth_id) ON UPDATE CASCADE ON DELETE CASCADE,
    PRIMARY KEY(user_id AUTOINCREMENT)
);
CREATE TABLE IF NOT EXISTS Auth (
    auth_id	INTEGER NOT NULL UNIQUE,
    password	TEXT NOT NULL,
    email	TEXT NOT NULL UNIQUE,
    status	INTEGER NOT NULL,
    admin	INTEGER NOT NULL,
    PRIMARY KEY(auth_id AUTOINCREMENT)
);
CREATE TABLE IF NOT EXISTS OrderProduct (
    op_id	INTEGER NOT NULL UNIQUE,
    quantity	INTEGER NOT NULL,
    product_id	INTEGER NOT NULL ,
    orders_id	INTEGER NOT NULL ,
    PRIMARY KEY(op_id AUTOINCREMENT),
    FOREIGN KEY(product_id) REFERENCES Product(product_id) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY(orders_id) REFERENCES Orders(orders_id) ON DELETE CASCADE ON UPDATE CASCADE
);
COMMIT;
    </string>
    <string name="insert_data">
        INSERT INTO \"main\".\"Auth\" (\"auth_id\", \"password\", \"email\", \"status\", \"admin\") VALUES (\'1\', \'root\', \'admin@sb.org\', \'0\', \'1\');
        INSERT INTO \"main\".\"User\" (\"user_id\", \"name\", \"contact\", \"image\", \"address\", \"auth_id\") VALUES (\'1\', \'Admin Name\', \'0775824807\', \'https://www.freewalldownload.com/cute-girl/latest-cute-girl-wallpaper-download-for-mobile.jpg\',\'null\', \'1\');

        INSERT INTO \"main\".\"Category\" (\"category_id\", \"name\", \"discount\") VALUES (\'1\', \'Classic\', \'0\');
        INSERT INTO \"main\".\"Category\" (\"category_id\", \"name\", \"discount\") VALUES (\'2\', \'Themed\', \'0\');
        INSERT INTO \"main\".\"Category\" (\"category_id\", \"name\", \"discount\") VALUES (\'3\', \'Birthday\', \'0\');
        INSERT INTO \"main\".\"Category\" (\"category_id\", \"name\", \"discount\") VALUES (\'4\', \'Anniversary\', \'0\');
        INSERT INTO \"main\".\"Category\" (\"category_id\", \"name\", \"discount\") VALUES (\'5\', \'New Baby\', \'0\');
        INSERT INTO \"main\".\"Category\" (\"category_id\", \"name\", \"discount\") VALUES (\'6\', \'Valentine’s Day\', \'0\');
        INSERT INTO \"main\".\"Category\" (\"category_id\", \"name\", \"discount\") VALUES (\'7\', \'Graduation\', \'0\');
        INSERT INTO \"main\".\"Category\" (\"category_id\", \"name\", \"discount\") VALUES (\'8\', \'Mother’s Day\', \'0\');

        INSERT INTO \"main\".\"Product\" (\"product_id\", \"name\", \"cream\", \"flavour\", \"unit_price\", \"image\", \"category_id\") VALUES (\'1\', \'Vanilla\', \'Vanilla Buttercream frosting\', \'Vanilla\', \'80\',                                 \'va1\', \'1\');
        INSERT INTO \"main\".\"Product\" (\"product_id\", \"name\", \"cream\", \"flavour\", \"unit_price\", \"image\", \"category_id\") VALUES (\'2\', \'Chocolate\', \'Chocolate buttercream frosting\', \'Chocolate\', \'120\',                          \'ch1\', \'1\');
        INSERT INTO \"main\".\"Product\" (\"product_id\", \"name\", \"cream\", \"flavour\", \"unit_price\", \"image\", \"category_id\") VALUES (\'3\', \'Coffee\', \'Coffee buttercream frosting\', \'Coffee\', \'100\',                                   \'co1\', \'1\');
        INSERT INTO \"main\".\"Product\" (\"product_id\", \"name\", \"cream\", \"flavour\", \"unit_price\", \"image\", \"category_id\") VALUES (\'4\', \'Animal\', \'Iced with buttercream\', \'Vanilla/Chocolate\', \'200\',                              \'an2\', \'2\');
        INSERT INTO \"main\".\"Product\" (\"product_id\", \"name\", \"cream\", \"flavour\", \"unit_price\", \"image\", \"category_id\") VALUES (\'5\', \'Mermaids\', \'Colored vanilla buttercream\', \'Chocolate/Vvanilla\', \'250\',                     \'me2\', \'2\');
        INSERT INTO \"main\".\"Product\" (\"product_id\", \"name\", \"cream\", \"flavour\", \"unit_price\", \"image\", \"category_id\") VALUES (\'6\', \'Purple\', \'Purple and white buttercream \', \'Chocolate/Vanilla \', \'190\',                     \'pu2\', \'2\');
        INSERT INTO \"main\".\"Product\" (\"product_id\", \"name\", \"cream\", \"flavour\", \"unit_price\", \"image\", \"category_id\") VALUES (\'7\', \'Funafuti\', \'Vanilla buttercream frosting\', \'Vanilla\', \'150\',                               \'fu3\', \'3\');
        INSERT INTO \"main\".\"Product\" (\"product_id\", \"name\", \"cream\", \"flavour\", \"unit_price\", \"image\", \"category_id\") VALUES (\'8\', \'Unicorn\', \'Vanilla buttercream frosting\', \'Vanilla and Marshmallow\', \'180\',                  \'un3\', \'3\');
        INSERT INTO \"main\".\"Product\" (\"product_id\", \"name\", \"cream\", \"flavour\", \"unit_price\", \"image\", \"category_id\") VALUES (\'9\', \'Double Chocolate\', \'Chocolate buttercream frosting\', \'Chocolate\', \'200\',                   \'do3\', \'3\');
        INSERT INTO \"main\".\"Product\" (\"product_id\", \"name\", \"cream\", \"flavour\", \"unit_price\", \"image\", \"category_id\") VALUES (\'10\', \'Red Velvet\', \'Cheese buttercream frosting\', \'Vanilla and hint of cocoa\', \'200\',             \'re4\', \'4\');
        INSERT INTO \"main\".\"Product\" (\"product_id\", \"name\", \"cream\", \"flavour\", \"unit_price\", \"image\", \"category_id\") VALUES (\'11\', \'Black forest\', \'Chocolaty and Cherry\', \'Cherry flavored buttercream frosting\', \'250\',       \'bl4\', \'4\');
        INSERT INTO \"main\".\"Product\" (\"product_id\", \"name\", \"cream\", \"flavour\", \"unit_price\", \"image\", \"category_id\") VALUES (\'12\', \'Vanilla\', \'Vanilla buttercream frosting\', \'Vanilla\', \'80\',                                \'va4\', \'4\');
        INSERT INTO \"main\".\"Product\" (\"product_id\", \"name\", \"cream\", \"flavour\", \"unit_price\", \"image\", \"category_id\") VALUES (\'13\', \'Pink Velvet\', \'Vanilla buttercream frosting\', \'Vanilla\', \'150\',                           \'pi5\', \'5\');
        INSERT INTO \"main\".\"Product\" (\"product_id\", \"name\", \"cream\", \"flavour\", \"unit_price\", \"image\", \"category_id\") VALUES (\'14\', \'Rainbow\', \'Vanilla\', \'Vanilla buttercream\', \'150\',                                        \'ra5\', \'5\');
        INSERT INTO \"main\".\"Product\" (\"product_id\", \"name\", \"cream\", \"flavour\", \"unit_price\", \"image\", \"category_id\") VALUES (\'15\', \'Inside Heart\', \'Vanilla buttercream frosting\', \'Vanilla\', \'200\',                          \'in6\', \'6\');
        INSERT INTO \"main\".\"Product\" (\"product_id\", \"name\", \"cream\", \"flavour\", \"unit_price\", \"image\", \"category_id\") VALUES (\'16\', \'Ferraro Rocher\', \'Chocolaty buttercream frosting\', \'Chocolaty\', \'300\',                    \'fe7\', \'7\');
        INSERT INTO \"main\".\"Product\" (\"product_id\", \"name\", \"cream\", \"flavour\", \"unit_price\", \"image\", \"category_id\") VALUES (\'17\', \'Caramel\', \'Caramel buttercream frosting\', \'Vanilla and Caramel\', \'200\',                     \'ca7\', \'7\');
        INSERT INTO \"main\".\"Product\" (\"product_id\", \"name\", \"cream\", \"flavour\", \"unit_price\", \"image\", \"category_id\") VALUES (\'18\', \'Strawberry\', \'Strawberry buttercream frosting\', \'Vanilla and Strawberry\', \'250\',            \'st8\', \'8\');

    </string>
    <string name="LKR">LKR </string>
    <string name="category_name">Category_name</string>
    <string name="expand_collapse_details">expand/collapse details</string>
    <string name="delete_message">Are sure about the deletion? \nCaution: All products of the category also will be deleted.</string>
    <string name="addproduct">Add</string>
    <string name="update">Update</string>
    <string name="deleteProductMsg">Are your sure about the deletion of this product?</string>
    <string name="btnDown">btnDown</string>
    <string name="dashboard">Dashboard</string>
</resources>