<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".tabs.Order">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".tabs.Order">

        <!-- All Categories -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            app:cardElevation="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textAllCategories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/all_categories"
                    android:textSize="20sp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCategories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    tools:itemCount="1" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Most popular -->
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/textSeasonalDeals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/most_popular"
                    android:textSize="20sp"/>
                <TextView
                    android:gravity="end"
                    android:id="@+id/textMPViewAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#676666"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/view_all"
                    android:textSize="14sp"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMostPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="1" />
        </LinearLayout>

        <!-- Super Deals -->
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:text="Super Deals"
                    android:textSize="20sp"/>
                <TextView
                    android:gravity="end"
                    android:id="@+id/textSPViewAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#676666"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/view_all"
                    android:textSize="14sp"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSuperDeals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:itemCount="1" />
        </LinearLayout>



    </LinearLayout>
</androidx.core.widget.NestedScrollView>
